--- a/GameRandomizer/ShellWindow.xaml
+++ b/GameRandomizer/ShellWindow.xaml
@@ -14,6 +14,9 @@
         Height="500"
         Width="950"
         Closed="Window_Closed">
+    <Window.Resources>
+        <ResourceDictionary Source="Dictionary1.xaml"/>
+    </Window.Resources>
     <Grid Name="MainGrid">
         <TabControl>
             <TabControl.Background>
@@ -61,6 +64,7 @@
                             <ColumnDefinition Width="316*" />
                         </Grid.ColumnDefinitions>
                         <TextBlock x:Name="HeadLineText"
+                                   TextWrapping="Wrap"
                                    HorizontalAlignment="Left"
                                    VerticalAlignment="Center"
                                    Grid.Column="2"
@@ -96,7 +100,7 @@
 
                     <Grid Grid.Row="2">
                         <StackPanel Margin="20 20 0 0">
-                            <TextBlock Text="Режим рандомизации:" />
+                            <TextBlock Text="Режим рандомизации:" TextWrapping="Wrap"/>
                             <StackPanel Margin="0 15 0 0">
                                 <RadioButton x:Name="FastRButton"
                                              IsChecked="True"></RadioButton>
@@ -119,6 +123,7 @@
                         </Grid.RowDefinitions>
                         <Grid>
                             <TextBlock x:Name="PhrasesTextBlock"
+                                       TextWrapping="Wrap"
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"
                                        Text="Здесь буду появляться фразы при режиме долгой рандомизации" />
@@ -177,6 +182,7 @@
                                                x:Name="WaitTextBlock"
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center"
+                                               TextWrapping="Wrap"
                                                Text="Пожалуйста, подождите..." />
 
                                     <Grid Grid.Column="1"
@@ -404,7 +410,6 @@
 
                             </ComboBox>
                         </Grid>
-
                         <Grid Width="100"
                               Height="35"
                               Margin="10">
@@ -414,6 +419,7 @@
 
 
                         </Grid>
+                        <Button Name="ChangeThemeButton" Content="смена темы" Click="ChangeThemeButton_Click"/>
                     </WrapPanel>
 
 
